# arduchat

./: .env.example  .gitignore  README.md  backend.py  chat_history.db  frontend.py  links_result_deduped.json  main.py  pyproject.toml  requirements.txt
agent/: m1-agent-suggest-file-with-session-history.ipynb  m1-agent-suggest-file.ipynb
app/: main.py
app/api/: chat.py  sessions.py
app/core/: chain.py  config.py  links.py  llm.py  params.py  rag.py
app/db/: database.py  history.py  schemas.py
pocs/: backend.py
pocs/web-crawller/: crawller.ipynb
src/: backend.ipynb  backend.py  chat_history.db
web-crawller/: crawller.ipynb  duped.ipynb
