[project]
name = "arduchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "jq>=1.12.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
]
